--- a/buy-files/greece.html
+++ b/buy-files/greece.html
@@ -47,18 +47,90 @@
 
         <div class="estate-athens wrap">
             <h2>Athens Properties</h2>
+            <div class="property-athens">
+                <div class="estate-photo">
+                    <img src="../photos/house4.jpeg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info">
+                        <div class="estate-info-text">
+                            <h1>221 Baker Street</h1>
+                            <p>Royal Archtecture, 10 Bedrooms, 12 Bathrooms, 2 Towers, Kitchen, Living Room, Dinning Room, 2 Office Rooms, Basement, Attic</p>
+                        </div>
+                        <div class="estate-price">
+                            <p><b>$21.999.000</b></p>
+                        </div>
+                        <div id="estate-button">
+                            <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="estate-chania wrap">
             <h2>Chania Properties</h2>
+            <div class="property-chania">
+                <div class="estate-photo">
+                    <img src="../photos/house5.jpeg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>Royal Archtecture, 10 Bedrooms, 12 Bathrooms, 2 Towers, Kitchen, Living Room, Dinning Room, 2 Office Rooms, Basement, Attic</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$21.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
+
+        .property-athens, .property-chania, .property-patras, .property-kavla
 
         <div class="estate-patras wrap">
             <h2>Patras Properties</h2>
+            <div class="property-patras">
+                <div class="estate-photo">
+                    <img src="../photos/italian-villa.jpeg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>Royal Archtecture, 10 Bedrooms, 12 Bathrooms, 2 Towers, Kitchen, Living Room, Dinning Room, 2 Office Rooms, Basement, Attic</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$29.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="estate-kavala wrap">
             <h2>Kavala Properties</h2>
+            <div class="property-kavla">
+                <div class="estate-photo">
+                    <img src="../photos/italy-house-for-sell.jpeg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>Royal Archtecture, 10 Bedrooms, 12 Bathrooms, 2 Towers, Kitchen, Living Room, Dinning Room, 2 Office Rooms, Basement, Attic</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$29.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="flex-three-info-boxes wrap">
