--- a/buy-files/greece.html
+++ b/buy-files/greece.html
@@ -52,7 +52,6 @@
                     <img src="../photos/house4.jpeg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
-                    <div class="estate-info">
                         <div class="estate-info-text">
                             <h1>221 Baker Street</h1>
                             <p>Royal Archtecture, 10 Bedrooms, 12 Bathrooms, 2 Towers, Kitchen, Living Room, Dinning Room, 2 Office Rooms, Basement, Attic</p>
@@ -63,6 +62,22 @@
                         <div id="estate-button">
                             <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
                         </div>
+                </div>
+            </div>
+            <div class="property-athens-house">
+                <div class="estate-photo">
+                    <img src="../photos/james-bold-UxCS2kVhZTc-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>Royal Archtecture, 10 Bedrooms, 12 Bathrooms, 2 Towers, Kitchen, Living Room, Dinning Room, 2 Office Rooms, Basement, Attic</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$21.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
                     </div>
                 </div>
             </div>
@@ -73,6 +88,23 @@
             <div class="property-chania">
                 <div class="estate-photo">
                     <img src="../photos/house5.jpeg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>Royal Archtecture, 10 Bedrooms, 12 Bathrooms, 2 Towers, Kitchen, Living Room, Dinning Room, 2 Office Rooms, Basement, Attic</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$21.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+            <div class="property-chania-house">
+                <div class="estate-photo">
+                    <img src="../photos/lux.jpeg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -108,6 +140,23 @@
                     </div>
                 </div>
             </div>
+            <div class="property-patras-house">
+                <div class="estate-photo">
+                    <img src="../photos/luxury-house.jpeg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>Royal Archtecture, 10 Bedrooms, 12 Bathrooms, 2 Towers, Kitchen, Living Room, Dinning Room, 2 Office Rooms, Basement, Attic</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$29.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="estate-kavala wrap">
@@ -115,6 +164,23 @@
             <div class="property-kavla">
                 <div class="estate-photo">
                     <img src="../photos/italy-house-for-sell.jpeg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>Royal Archtecture, 10 Bedrooms, 12 Bathrooms, 2 Towers, Kitchen, Living Room, Dinning Room, 2 Office Rooms, Basement, Attic</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$29.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+            <div class="property-kavla-house">
+                <div class="estate-photo">
+                    <img src="../photos/lycs-architecture-kUdbEEMcRwE-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
