--- a/buy-files/greece.html
+++ b/buy-files/greece.html
@@ -98,6 +98,23 @@
                     </div>
                 </div>
             </div>
+            <div class="property-athens-house-two">
+                <div class="estate-photo">
+                    <img src="../photos/naples-house-three.jpeg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>Royal Archtecture, 10 Bedrooms, 12 Bathrooms, 2 Towers, Kitchen, Living Room, Dinning Room, 2 Office Rooms, Basement, Attic</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$39.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="estate-chania wrap">
@@ -139,6 +156,23 @@
             <div class="property-chania-house-one">
                 <div class="estate-photo">
                     <img src="../photos/maxresdefault.jpg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>Royal Archtecture, 10 Bedrooms, 12 Bathrooms, 2 Towers, Kitchen, Living Room, Dinning Room, 2 Office Rooms, Basement, Attic</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$21.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+            <div class="property-chania-house-two">
+                <div class="estate-photo">
+                    <img src="../photos/naples-house-two.webp" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -208,6 +242,23 @@
                     </div>
                 </div>
             </div>
+            <div class="property-patras-house-two">
+                <div class="estate-photo">
+                    <img src="../photos/naples-photo.jpeg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>Royal Archtecture, 10 Bedrooms, 12 Bathrooms, 2 Towers, Kitchen, Living Room, Dinning Room, 2 Office Rooms, Basement, Attic</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$29.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="estate-kavala wrap">
@@ -249,6 +300,23 @@
             <div class="property-kavla-house-one">
                 <div class="estate-photo">
                     <img src="../photos/naples-house-one.jpeg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>Royal Archtecture, 10 Bedrooms, 12 Bathrooms, 2 Towers, Kitchen, Living Room, Dinning Room, 2 Office Rooms, Basement, Attic</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$29.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+            <div class="property-kavla-house-two">
+                <div class="estate-photo">
+                    <img src="../photos/nick-romanov-_hw4aUQ81ic-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
