--- a/buy-files/bulgaria.html
+++ b/buy-files/bulgaria.html
@@ -81,6 +81,23 @@
                     </div>
                 </div>
             </div>
+            <div class="property-sofia-house-one">
+                <div class="estate-photo">
+                    <img src="../photos/SiteImage-Landing-modern-house-plans-1.webp" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>Royal Archtecture, 10 Bedrooms, 12 Bathrooms, 2 Towers, Kitchen, Living Room, Dinning Room, 2 Office Rooms, Basement, Attic</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$29.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="estate-burgas wrap">
@@ -105,6 +122,23 @@
             <div class="property-burgas-house">
                 <div class="estate-photo">
                     <img src="../photos/rome-mansion-sale.avif" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>Royal Archtecture, 10 Bedrooms, 12 Bathrooms, 2 Towers, Kitchen, Living Room, Dinning Room, 2 Office Rooms, Basement, Attic</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$29.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+            <div class="property-burgas-house-one">
+                <div class="estate-photo">
+                    <img src="../photos/six.jpeg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -157,6 +191,23 @@
                     </div>
                 </div>
             </div>
+            <div class="property-plovdiv-house-one">
+                <div class="estate-photo">
+                    <img src="../photos/sixteen.jpeg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>Royal Archtecture, 10 Bedrooms, 12 Bathrooms, 2 Towers, Kitchen, Living Room, Dinning Room, 2 Office Rooms, Basement, Attic</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$29.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="estate-nessebar wrap">
@@ -181,6 +232,23 @@
             <div class="property-nessbar-house">
                 <div class="estate-photo">
                     <img src="../photos/sell-my-house-fast-Florence-South-Carolina.jpg.webp" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>Royal Archtecture, 10 Bedrooms, 12 Bathrooms, 2 Towers, Kitchen, Living Room, Dinning Room, 2 Office Rooms, Basement, Attic</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$29.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+            <div class="propery-nessbar-house-one">
+                <div class="estate-photo">
+                    <img src="../photos/sunny-naples.jpeg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
